--- a/2.md
+++ b/2.md
@@ -20,14 +20,14 @@ Aliyun provides storage type of "infrequently visited data", which is perfect fo
 
 **Monthly cost** = 200 \* 0.08 + 10 \* 0.032 + 0.50 \* 10 = 21.32
 
-And I can expected ~80% discount from Aliyun  
+And I can expect a discount of ~80% from Aliyun  
 
 **Estimated Annual cost** = 21.32 \* 12 \* 0.8 = 204.672
 
 ## Define requirements
-* I want to access my data from mac laptop and linux VPS, and a mountable file system like [s3fs](https://github.com/s3fs-fuse/s3fs-fuse) is preferred.
-* For well-known reasons, I don't know if Aliyun will censor my data, so an encryption layer is a must.
+* I want to access my data from my mac laptop and linux VPS, and a mountable file system like [s3fs](https://github.com/s3fs-fuse/s3fs-fuse) is preferred.
+* For well-known reasons, Aliyun may censor my data, so an encryption layer is a must.
 * I'm the only user of this file system, so race condition (like read & write at the same time) is not a concern.
-* I want to get my data as quick as possible, so I have to do some acceleration like prefetch & multiple threading.
+* I want to get my data as quickly as possible, so I have to do some acceleration like prefetch & multiple threading.
 * I have to pay for every byte from Aliyun, so I'd better cache the data locally to reduce the total cost, it's also good for accelerate the reading.
-* Random read is rare, and random write almost never happens, so I don't care `fseek`.
+* Random read is rare, and random write almost never happens, so I don't really care about `fseek`.
